--- a/styles/cmds.tex
+++ b/styles/cmds.tex
@@ -217,6 +217,9 @@
 
 \newcommand{\euros}[1]{ \ensuremath{#1 \text{€}} }
 
+\newcommand{\mat}[1]{\ensuremath{#1} }
+\newcommand{\nperc}[1]{\ensuremath{#1\,\%} }
+
 \makeatletter
 %% The "\@seccntformat" command is an auxiliary command
 %% (see pp. 26f. of 'The LaTeX Companion,' 2nd. ed.)
