--- a/dsc201x.tex
+++ b/dsc201x.tex
@@ -64,6 +64,7 @@ CIENCIA DE DATOS (DATA SCIENCE)\\
     \tableofcontents
 
     \include{mod01}
+    \include{mod02}
     
     %%\include{integration}
 
