--- a/dsc201x.tex
+++ b/dsc201x.tex
@@ -70,7 +70,11 @@ CIENCIA DE DATOS (DATA SCIENCE)\\
 
     %%\include{geometry}
 
-    %%\appendix    
-    %%\appendixpage
-
+    \appendix 
+    \begin{appendices}
+        \chapter{Introducción suave al método Bootstrap (Jason Brownlee)}
+        \includepdf[pages=-]{pdfs/IntroduccionBootstrap.pdf}
+    
+    \end{appendices}
+    
 \end{document}
