--- a/styles/cmds.tex
+++ b/styles/cmds.tex
@@ -262,3 +262,8 @@
   escapeinside={\%*}{*)},         % if you want to add a comment within your code
   morekeywords={*,...}            % if you want to add more keywords to the set
 } 
+
+%%%\addto\captionsspanish{%
+%%%  \renewcommand\appendixname{APÉNDICE}
+%%%  \renewcommand\appendixpagename{Apéndices}
+%%%}
